# symbolic_nn_tests

./: .gitignore  .mailmap  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
results/Experiment1/: test_loss.html  train_loss.html  val_loss.html
results/Experiment2/: test_loss.html  train_loss.html  val_loss.html
src/symbolic_nn_tests/: __init__.py  __main__.py  dataloader.py  models.py  plot_metrics.py  train.py
src/symbolic_nn_tests/callbacks/: tensorboard.py  wandb.py
src/symbolic_nn_tests/experiment1/: __init__.py  model.py  semantic_loss.py
src/symbolic_nn_tests/experiment2/: __init__.py  dataset.py  math.py  model.py  semantic_loss.py  train.py
src/symbolic_nn_tests/experiment3/: __init__.py  boolean_constraints.scl  kleene_constraints.scl  model.py  semantic_loss.py
src/symbolic_nn_tests/experiment4/: __init__.py  exact_kleene_loss.py  exact_loss.py  ltn_belnap_loss.py  ltn_kleene_loss.py  ltn_loss.py  model.py
src/symbolic_nn_tests/experiment5/: __init__.py  model.py  semantic_loss.py
src/symbolic_nn_tests/experiment6/: __init__.py  semantic_loss.py
src/symbolic_nn_tests/local/: README.md  semantic_loss.py
symbolic_nn_tests/: __main__.py  dataloader.py  ffnn.py  model.py  semantic_loss.py  train.py  trainer.py
symbolic_nn_tests/experiment1/: __init__.py  model.py  semantic_loss.py
symbolic_nn_tests/experiment2/: __init__.py  dataset.py  model.py  semantic_loss.py  train.py
symbolic_nn_tests/qmnist/: model.py  semantic_loss.py
