[tool.poetry]
name = "symbolic-nn-tests"
version = "0.1.0"
description = ""
authors = ["Cian Hughes <chughes000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
lightning = "^2.2.4"
torchvision = "^0.18.0"
wandb = "^0.17.0"
optuna = "^3.6.1"
setuptools = "^69.5.1"
gdown = "^5.2.0"
bpython = "^0.24"
ipython = "^8.24.0"
matplotlib-backend-kitty = "^2.1.2"
euporie = "^2.8.2"
ipykernel = "^6.29.4"
tensorboard = "^2.16.2"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
