[project]
name = "symbolic-nn-tests"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cian Hughes", email = "chughes000@gmail.com" }
]
dependencies = [
    "torch>=2.4.1",
    "lightning>=2.4.0",
    "torchvision>=0.19.1",
    "wandb>=0.17.9",
    "optuna>=4.0.0",
    "setuptools>=74.1.2",
    "gdown>=5.2.0",
    "bpython>=0.24",
    "ipython>=8.27.0",
    "matplotlib-backend-kitty>=2.1.2",
    "euporie>=2.8.2",
    "ipykernel>=6.29.5",
    "tensorboard>=2.17.1",
    "typer>=0.12.5",
    "kaggle>=1.6.17",
    "periodic-table-dataclasses>=1.0",
    "polars>=1.6.0",
    "jupyter>=1.1.1",
    "safetensors>=0.4.5",
    "alive-progress>=3.1.5",
    "hvplot>=0.10.0",
    "pyarrow>=17.0.0",
    "loguru>=0.7.2",
    "plotly>=5.24.0",
    "snoop>=0.4.3",
    "scikit-optimize>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"symbolic-nn-tests" = "symbolic_nn_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/symbolic_nn_tests"]
